# eventuals

./: Cargo.toml  README.md
src/: error.rs  lib.rs  subscribers.rs
src/combinators/: mod.rs
src/eventual/: change.rs  eventual.rs  eventual_ext.rs  mod.rs  ptr.rs  reader.rs  shared_state.rs  writer.rs
tests/: eventual.rs  handle_errors.rs  idle.rs  join.rs  map.rs  pipe.rs  select.rs  timer.rs
